// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const foo = require('./foo');
(foo: string);

module.exports = foo;

=====================================output=====================================
// @flow

const foo = require("./foo");
(foo: string);

module.exports = foo;

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const x = 0;
module.exports = x;

=====================================output=====================================
// @flow

const x = 0;
module.exports = x;

================================================================================
`;
